Create Taskbar & Desktop components
Also added Desktop to index page.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Desktop from '../components/desktop.astro';
 import timegear from '../images/timegear.png';
 ---
 
@@ -11,6 +12,6 @@ import timegear from '../images/timegear.png';
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<Desktop>
 	</body>
 </html>
