Create Start Menu component
- Added to taskbar component
- Added Github, Medium, Source Code, and Shut Down items to menu
- Menu items don't do anything on click
- Menu is always open

--- a/src/components/taskbar.astro
+++ b/src/components/taskbar.astro
@@ -1,8 +1,10 @@
 ---
 import '98.css';
 import timegear from '../images/timegear.png';
+import StartMenu from './start-menu.astro';
 ---
 
+<StartMenu></StartMenu>
 <div class ="taskbar window">
   <button class="start">
     <img src={timegear}>
